5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_1053.log
== SUBMITION (2019-04-05 10:32:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(cervo=patrono):
	print("cervo_eh_patrono_do_harry_potter")
else:
	print("nao_eh_patrono_do_herry_potter")
-- EXECUTION TIME:
0.130954
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    if(cervo=patrono):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:32:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(cervo=patrono):
	print("cervo_eh_patrono_do_harry_potter")
else:
	print("nao_eh_patrono_do_herry_potter")
-- ERROR:
File "XXXX", line 5
    if(cervo=patrono):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:32:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(cervo==patrono):
	print("cervo_eh_patrono_do_harry_potter")
else:
	print("nao_eh_patrono_do_herry_potter")
-- EXECUTION TIME:
0.149085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 5, in <module>
    if(cervo==patrono):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:33:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(cervo==patrono):
	print("cervo_eh_patrono_do_harry_potter")
else:
	print("nao_eh_patrono_do_herry_potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(cervo==patrono):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:34:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(patrono):
	print("cervo_eh_patrono_do_harry_potter")
else:
	print("nao_eh_patrono_do_herry_potter")
-- EXECUTION TIME:
0.157397
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo_eh_patrono_do_harry_potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo_eh_patrono_do_harry_potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:12:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if(patrono=="cervo"):
	resposta=("cervo_eh_patrono_do_harry_potter")
else:
	resposta=("nao_eh_patrono_do_herry_potter")
	mensagem=nome+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.125664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:13:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=nome+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.147792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:13:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.129909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:13:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.155467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:13:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.153519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:13:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:14:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.204002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:14:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do harry potter")
else:
	resposta=("nao eh patrono do herry potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:14:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.127889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.165441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:15:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.148483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.244926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.134748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.122471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.211281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.164944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:15:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.182298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:15:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta=("cervo eh patrono do Harry Potter")
else:
	resposta=("nao eh patrono do Harry Potter")
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:17:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
	mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.191844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
	mensagem=patrono+" "+resposta
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.228684
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.13927
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="cervo eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.153298
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:19:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="eh patrono do Harry Potter"
else:
	resposta="eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.198082
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:19:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("digite o patrono:")
if (patrono=="cervo"):
	resposta="eh patrono do Harry Potter"
else:
	resposta="nao eh patrono do Harry Potter"
mensagem=patrono+" "+resposta
print(mensagem)
-- EXECUTION TIME:
0.168529
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
